--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,8 +25,12 @@ html {
   overflow: hidden;
 }
 
+/*feature images*/
 .image-container img {
   display: block;
+  width: 90%;
+  height: 65%;
+  margin: 32px 32px 40px;
 }
 
 @media only screen and (max-width: 760px) {
@@ -240,6 +244,7 @@ header .mobile {
   padding: 2rem;
   margin: 0px 1.25rem;
   background-color: white;
+  height: 635px;
 }
 
 .feature .image-container {
@@ -251,6 +256,7 @@ header .mobile {
   font-size: 2.25rem;
   font-weight: bold;
   color: #4a4a4a;
+  margin:0px;
 }
 
 .feature h3 {
@@ -258,6 +264,7 @@ header .mobile {
   line-height: 1.2;
   font-weight: 300;
   color: #4a4a4a;
+  margin: 0px;
 }
 
 @media only screen and (max-width: 890px) {
