--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,7 +8,8 @@ html {
 /*Main Content*/
 .main-content {
   position: relative;
-  top: 5.3125rem; /* To offset for fixed header. */
+  top: 5.3125rem;
+  /* To offset for fixed header. */
 }
 
 .center {
@@ -31,11 +32,6 @@ html {
   width: 100%;
 }
 
-@media only screen and (max-width: 760px) {
-  .main-content {
-    top: 2.5625rem;
-  }
-}
 
 /* Header */
 
@@ -45,7 +41,7 @@ header {
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
   z-index: 100;
-  top:0;
+  top: 0;
 
 }
 
@@ -57,7 +53,7 @@ header .content {
 
 header .logo {
   flex: 1;
-  text-decoration:none;
+  text-decoration: none;
 }
 
 header nav ul {
@@ -89,7 +85,8 @@ header .mobile {
   display: none;
 }
 
-@media only screen and (max-width: 760px) {
+
+@media only screen and (max-width: 400px) {
   header .desktop {
     display: none;
   }
@@ -129,15 +126,15 @@ header .mobile {
   justify-content: flex-start;
   align-items: flex-start;
   height: 43.5rem;
-  background-image:url(../images/banner-landingpage.jpg);
+  background-image: url(../images/banner-landingpage.jpg);
 }
 
 #sign-up-cta {
   border: solid 1px #979797;
   border-radius: 4px;
   background-color: #9dc20b;
-  margin:170px 100px;
-  
+  margin: 170px 100px;
+
 }
 
 #sign-up-cta .content {
@@ -150,9 +147,9 @@ header .mobile {
 }
 
 #sign-up-cta h1 {
-  font-family:"Rubik";
-  line-height:1.4;
-  font-weight:100;
+  font-family: "Rubik";
+  line-height: 1.4;
+  font-weight: 100;
 }
 
 #sign-up-cta h2 {
@@ -166,14 +163,14 @@ header .mobile {
 #sign-up-cta .cursive {
   font-family: "Damion", cursive;
   font-weight: normal;
-  margin-top:32px;
+  margin-top: 32px;
   margin-bottom: 0px;
 }
 
 #sign-up-cta .striking {
   font-size: 3.125rem;
   margin-bottom: 12px;
-  margin-top:0px;
+  margin-top: 0px;
 
 }
 
@@ -182,36 +179,19 @@ header .mobile {
   padding: 1.25rem 7.25rem;
 }
 
-@media only screen and (max-width: 760px) {
-  #sign-up-section {
-    align-items: center;
-    justify-content: center;
-    height: 28rem;
-  }
+#sign-up-cta .content {
+  margin-top: 0;
+}
 
-  #sign-up-cta {
-    position: static;
-    width: auto;
-    height: auto;
-    background-color: transparent;
-    border: none;
-  }
 
-  #sign-up-cta .content {
-    margin-top: 0;
-  }
 
-  #sign-up-cta .email {
-    display: none;
-  }
+#sign-up-cta h1 {
+  font-size: 3.125rem;
+}
 
-  #sign-up-cta h1 {
-    font-size: 3.125rem;
-  }
-
-  #sign-up-cta h2 {
-    font-size: 2.25rem;
-  }
+#sign-up-cta h2 {
+  font-size: 2.25rem;
+}
 }
 
 @media only screen and (max-width: 450px) {
@@ -255,7 +235,7 @@ header .mobile {
   font-family: Roboto-Bold;
   font-weight: bold;
   color: #4a4a4a;
-  margin:0px;
+  margin: 0px;
   line-height: 1.2;
 }
 
@@ -280,17 +260,6 @@ header .mobile {
   }
 }
 
-@media only screen and (max-width: 760px) {
-  #features-section {
-    flex-flow: column;
-    padding: 0;
-  }
-
-  .feature {
-    margin: 0;
-    padding: 1.25rem 1rem 0 1rem;
-  }
-}
 
 /* Filters Section */
 
@@ -325,7 +294,126 @@ header .mobile {
   margin: 0 1%;
 }
 
+
+/* Quotes Section */
+
+#quotes-section {
+  background-color: #f3f3f3;
+  height: 100%;
+  padding: 80px 0px;
+}
+
+#quotes-section content {
+  padding: 5rem 0;
+}
+
+#quotes-section .quote {
+  padding-right: 1.875rem;
+  font-family: "Palatino", serif;
+  font-size: 1.875rem;
+  line-height: 1.1;
+  font-style: italic;
+  color: #4a4a4a;
+  padding-right: 30px;
+}
+
+#quotes-section quote-citation {
+  height: 1.875rem;
+}
+
+
+/* Footer */
+
+footer {
+  background-color: #9b9b9b;
+  padding: 1.5rem 2rem;
+}
+
+footer .content {
+  color: white;
+  display: flex;
+  font-size: .75rem;
+}
+
+footer .copyright {
+  flex-grow: 1;
+  margin-right: 32px;
+}
+
 @media only screen and (max-width: 760px) {
+
+  header .content {
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+    height:1rem;
+  }
+
+  header .mobile .button {
+    padding: .1875rem .5rem;
+    background-color: #9dc20b;
+    line-height: 1.6;
+    color: white;
+  }
+  
+  .main-content {
+    top: 2.5625rem;
+  }
+
+  #sign-up-section {
+    align-items: center;
+    justify-content: center;
+    height: 28rem;
+    background-size: contain;
+    background-repeat: no-repeat;
+    
+  }
+
+  #sign-up-cta .content {
+    width: 25.625rem;
+    margin: 2rem 5rem 7.5rem;
+    font-size: 1.25rem;
+    color: white;
+    padding-bottom: .75rem;
+  }
+
+  #sign-up-cta .email {
+    display: none;
+  }
+
+  #features-section {
+    flex-flow: column;
+    padding: 0;
+  }
+
+  .feature {
+    margin: 0;
+    padding: 1.25rem 1rem 0 1rem;
+  }
+
+  #quotes-section content {
+    padding: 1.875rem .625rem;
+  }
+
+  #quotes-section quote {
+    font-size: 1.5rem;
+    line-height: 1.4;
+  }
+
+  #quotes-section quote-citation {
+    display: block;
+    padding-top: 1rem;
+    margin: auto;
+  }
+
+  #sign-up-cta {
+    position: static;
+    width: auto;
+    height: auto;
+    background-color: transparent;
+    border: none;
+  }
+
   #filters-section {
     padding: 1.5rem 0 0 0;
   }
@@ -353,71 +441,9 @@ header .mobile {
   #filters-section .extra {
     display: none;
   }
-}
 
-/* Quotes Section */
-
-#quotes-section {
-  background-color: #f3f3f3;
-  height:100%;
-  padding:80px 0px;
-}
-
-#quotes-section content {
-  padding: 5rem 0;
-}
-
-#quotes-section .quote {
-  padding-right: 1.875rem;
-  font-family: "Palatino", serif;
-  font-size: 1.875rem;
-  line-height: 1.1;
-  font-style: italic;
-  color: #4a4a4a;
-  padding-right:30px;
-}
-
-#quotes-section quote-citation {
-  height: 1.875rem;
-}
-
-@media only screen and (max-width: 760px) {
-  #quotes-section content {
-    padding: 1.875rem .625rem;
-  }
-
-  #quotes-section quote {
-    font-size: 1.5rem;
-    line-height: 1.4;
-  }
-
-  #quotes-section quote-citation {
-    display: block;
-    padding-top: 1rem;
-    margin: auto;
-  }
-}
-
-/* Footer */
-
-footer {
-  background-color: #9b9b9b;
-  padding: 1.5rem 2rem;
-}
-
-footer .content {
-  color: white;
-  display: flex;
-  font-size: .75rem;
-}
-
-footer .copyright {
-  flex-grow: 1;
-  margin-right: 32px;
-}
-
-@media only screen and (min-width: 760px) {
   footer .content {
     font-size: .625rem;
   }
+
 }
