--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -86,38 +86,6 @@ header .mobile {
 }
 
 
-@media only screen and (max-width: 400px) {
-  header .desktop {
-    display: none;
-  }
-
-  header .mobile {
-    display: block;
-    width: 100%;
-  }
-
-  header .content {
-    padding: .5rem 0;
-  }
-
-  header .mobile ul {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-  }
-
-  header .mobile li {
-    padding: 0;
-  }
-
-  header .mobile .button {
-    padding: .1875rem .5rem;
-    background-color: #9dc20b;
-    line-height: 1.6;
-    color: white;
-  }
-}
 
 /* Sign Up Section */
 
@@ -183,8 +151,6 @@ header .mobile {
   margin-top: 0;
 }
 
-
-
 #sign-up-cta h1 {
   font-size: 3.125rem;
 }
@@ -192,21 +158,7 @@ header .mobile {
 #sign-up-cta h2 {
   font-size: 2.25rem;
 }
-}
 
-@media only screen and (max-width: 450px) {
-  #sign-up-section {
-    height: 20rem;
-  }
-
-  #sign-up-cta h1 {
-    font-size: 2.25rem;
-  }
-
-  #sign-up-cta h2 {
-    font-size: 2rem;
-  }
-}
 
 /* Features Section */
 
@@ -247,18 +199,6 @@ header .mobile {
   margin: 0px;
 }
 
-@media only screen and (max-width: 890px) {
-  .feature h2 {
-    font-size: 1.125rem;
-    line-height: 1.3;
-    font-weight: normal;
-  }
-
-  .feature h3 {
-    font-size: .875rem;
-    line-height: 1.4;
-  }
-}
 
 
 /* Filters Section */
@@ -340,13 +280,43 @@ footer .copyright {
   margin-right: 32px;
 }
 
+@media only screen and (max-width: 890px) {
+  .feature h2 {
+    font-size: 1.125rem;
+    line-height: 1.3;
+    font-weight: normal;
+  }
+
+  .feature h3 {
+    font-size: .875rem;
+    line-height: 1.4;
+  }
+}
+
 @media only screen and (max-width: 760px) {
 
+  header .desktop {
+    display: none;
+  }
+
+  header .mobile {
+    display: block;
+    width: 100%;
+  }
+
   header .content {
+    padding: .5rem 0;
+  }
+
+  header .mobile ul {
     display: flex;
+    justify-content: space-around;
     align-items: center;
-    padding: 1rem;
-    height:1rem;
+    width: 100%;
+  }
+
+  header .mobile li {
+    padding: 0;
   }
 
   header .mobile .button {
@@ -382,13 +352,20 @@ footer .copyright {
   }
 
   #features-section {
-    flex-flow: column;
+    flex-flow: initial;
     padding: 0;
   }
 
   .feature {
     margin: 0;
     padding: 1.25rem 1rem 0 1rem;
+    height:inherit;
+  }
+
+  .feature h2{
+    font-size:2.125rem;
+    line-height: 1.3;
+    font-weight: bold;
   }
 
   #quotes-section content {
@@ -419,19 +396,22 @@ footer .copyright {
   }
 
   #filters-section .content {
-    margin-bottom: 1rem;
+    margin:0;
   }
 
   #filters-section .content h2 {
     padding-bottom: .625rem;
-    font-size: 1.125rem;
+    font-size: 2.125rem;
     line-height: 1.3;
-    font-weight: normal;
+    font-weight: bold;
+    margin-bottom: 0px;
   }
 
   #filters-section .content h3 {
     font-size: .875rem;
     line-height: 1.4;
+    margin-top:0;
+    margin-bottom: 3rem;
   }
 
   #filters-section .images-container {
@@ -446,4 +426,80 @@ footer .copyright {
     font-size: .625rem;
   }
 
+}
+
+@media only screen and (max-width: 510px) {
+  header .desktop {
+    display: none;
+  }
+
+  header .mobile {
+    display: block;
+    width: 100%;
+  }
+
+  header .content {
+    padding: .5rem 0;
+  }
+
+  header .mobile ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+  }
+
+  header .mobile li {
+    padding: 0;
+  }
+
+  header .mobile .button {
+    padding: .1875rem .5rem;
+    background-color: #9dc20b;
+    line-height: 1.6;
+    color: white;
+    font-size: 1.25rem;
+  }
+
+  #sign-up-section {
+    height: 20rem;
+    background-size: 200%;
+    background-position-x: right;
+  }
+
+  #sign-up-cta .content {
+    width: 25.625rem;
+    margin: 12rem 5rem 7.5rem;
+    font-size: 1.25rem;
+    color: white;
+    padding-bottom: .75rem;
+}
+
+  #sign-up-cta h1 {
+    font-size: 2.25rem;
+  }
+
+  #sign-up-cta h2 {
+    font-size: 2rem;
+  }
+
+  #features-section .content{
+    margin:31px;
+  }
+
+  .feature h2{
+    font-size: 28px;
+  }
+
+  .feature h3{
+    font-size:18px;
+  }
+
+  #features-section{
+    display: block;
+  }
+
+  footer .content{
+    font-size:10px;
+  }
 }
